Fixed for Chrome
Bug fixes didn't look good on Chrome so added a new CSS page for it

--- a/css/mainchrome.css
+++ b/css/mainchrome.css
@@ -803,19 +803,21 @@ form {
 }
 
 .box2 {
-  position: absolute;
-  margin-top: 60px;
-  margin-left: 0%;
+  position: relative;
+  margin-top: 80px;
+  margin-left: -370px;
   margin-right: 0%;
+  padding-bottom: 60px;
   z-index: 1;
-  }
+}
 
-  .left {
-    margin-left: 0px;
-  }
+.left {
+  position: relative;
+  margin-left: -60px;
+}
 
   .crypSpace {
-    margin-top: 30px;
+    margin-top: 50px;
   }
 
   .imgRight1{
@@ -862,7 +864,7 @@ form {
   padding: 30px;
   border: 3px solid ivory;
   margin: 20px;
-  overflow-x: hidden;
+  overflow: hidden;
   border-radius: 5px;
   font-family: fira-mono, monospace;
   font-size: 18px;
@@ -880,10 +882,11 @@ form {
   justify-content: center;
   flex-wrap: wrap;
   position: absolute;
- padding: 20px;
- border-radius: 15px;
- margin-left: 6%;
- margin-right: auto;
+  padding: 20px;
+  border-radius: 15px;
+  margin-left: 6%;
+  margin-right: auto;
+  position: relative;
 }
 
 .pics {
@@ -898,11 +901,11 @@ form {
   font-family: fira-mono, monospace;
   font-weight: 700;
   font-size: 22px;
-  margin-top: -30px;
+  margin-top: -45px;
   z-index: 9999;
 }
 
 .about{
-  margin-top: -10px;
+  margin-top: -40px;
 }
 
